# agentic-starter-kits

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  run_llama_server.yaml  template.env
agents/base/autogen_agent/: Dockerfile  deploy.sh  init.sh  main.py  pyproject.toml  requirements.txt
agents/base/autogen_agent/k8s/: deployment.yaml
agents/base/autogen_agent/mcp-automl-template/: mcp_server.py  utils.py
agents/base/autogen_agent/mcp_automl_template/: mcp_server.py  requirements.txt
agents/base/autogen_agent/src/autogen_agent_base/: agent.py
agents/base/langgraph_react_agent/: Dockerfile  README.md  init.sh  main.py  pyproject.toml  requirements.txt
agents/base/langgraph_react_agent/examples/: _interactive_chat.py  execute_ai_service_locally.py
agents/base/langgraph_react_agent/src/langgraph_react_agent_base/: agent.py
agents/base/langgraph_react_agent/tests/: test_tools.py
agents/base/llamaindex_websearch_agent/: Dockerfile  README.md  init.sh  main.py  pyproject.toml  requirements.txt
agents/base/llamaindex_websearch_agent/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py
agents/base/llamaindex_websearch_agent/src/llama_index_workflow_agent_base/: agent.py  workflow.py
agents/base/llamaindex_websearch_agent/tests/: test_tools.py
agents/base/llamastack_agent/: Dockerfile  README.md  deploy.sh  init.sh  main.py  pyproject.toml  requirements.txt
agents/base/llamastack_agent/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py
agents/base/llamastack_agent/k8s/: deployment.yaml  route.yaml  service.yaml
agents/base/llamastack_agent/src/llamastack_agent_base/: __init__.py  agent.py
agents/base/openai_responses_agent/: Dockerfile  README.md  init.sh  main.py  pyproject.toml  requirements.txt
agents/base/openai_responses_agent/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py
agents/base/openai_responses_agent/src/openai_responses_agent_base/: __init__.py  agent.py  utils.py
agents/community/langgraph_agentic_rag/: .env.example  Dockerfile  README.md  deploy.sh  init.sh  main.py  pyproject.toml  requirements.txt
agents/community/langgraph_agentic_rag/data/: load_documents.py
agents/community/langgraph_agentic_rag/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py
agents/community/langgraph_agentic_rag/k8s/: deployment.yaml
agents/community/langgraph_agentic_rag/src/langgraph_agentic_rag/: agent.py  tools.py
agents/community/langgraph_agentic_rag/tests/: test_tools.py
agents/community/langgraph_react_with_database_memory/: .env.example  Dockerfile  README.md  init.sh  main.py  pyproject.toml  requirements.txt
agents/community/langgraph_react_with_database_memory/examples/: _interactive_chat.py  ai_service.py  clear_thread_history.py  execute_ai_service_locally.py  query_existing_deployment.py
agents/community/langgraph_react_with_database_memory/src/langgraph_react_with_database_memory_base/: agent.py
