[tool.poetry]
name = "autogen_agent_base"
version = "0.1.0"
description = "AutoGen AssistantAgent with OpenAI (or OpenAI-compatible) chat completion client."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "autogen_agent_base", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
python-dotenv = "^1.0.0"
openai = ">=1.0.0"
autogen-agentchat = ">=0.5.0"
autogen-ext = { extras = ["openai"], version = ">=0.2.0" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
