[tool.poetry]
name = "langgraph_react_agent_base"
version = "0.1.0"
description = "A template for a LangGraph LLM app deployable on RHOAI Cloud as an ai_service. This particular example focues on an AutoX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_react_agent_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.41.0" }
pydantic = ">=2.0.0"
langchain = ">=1.2.7"
langchain-core = ">=1.2.7"
langchain-openai = ">=1.1.7"
langgraph = ">=1.0.7"
langgraph-prebuilt = ">=1.0.0"
llama-stack = ">=0.5.0"
llama-stack-client = ">=0.5.0"
openai = ">=1.109.1"
setuptools = "69.5.1"
milvus-lite = "2.5.1"
pymilvus = "2.6.9"
python-dotenv = ">=1.0.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.eval.dependencies]
unitxt = "^1.24.0"
datasets = "3.6.0"
nltk = "^3.9.1"
rouge-score = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
