[tool.poetry]
name = "llama_index_workflow_agent_base"
version = "0.1.0"
description = "A template for a LlamaIndex LLM app deployable on RHOAI Cloud as an ai_service. This particular example focues on an AutoX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "llama_index_workflow_agent_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10, <=3.13.*"
llama-index-llms-openai = ">=0.5.0"
llama-index = "0.14.3"
llama-index-core = "0.14.3"
llama-index-utils-workflow = ">=0.5.0"
openai = ">=1.0.0"
numpy = "<2"
python-dotenv = "^1.0.0"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
