[tool.poetry]
name = "openai_responses_agent_base"
version = "0.1.0"
description = "Agent without any agentic framework: OpenAI client and pure Python (Responses API)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "openai_responses_agent_base", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
python-dotenv = "^1.0.0"
openai = ">=1.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
