[tool.poetry]
name = "openai_responses_agent_base"
version = "0.1.0"
description = "Agent without any agentic framework: OpenAI client and pure Python (Responses API)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "openai_responses_agent_base", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
python-dotenv = "^1.0.0"
openai = ">=1.0.0"
llama-stack = ">=0.5.0"
setuptools = "69.5.1"
milvus-lite = "2.5.1"
pymilvus = "2.6.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
